# ticket_selling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ticket_selling/: manage.py
ticket_selling/api_v1/: urls.py
ticket_selling/events/: models.py  serializers.py  tests.py  urls.py  views.py
ticket_selling/events/migrations/: 0001_initial.py
ticket_selling/stats/: serializers.py  views.py
ticket_selling/ticket_selling/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ticket_selling/tickets/: admin.py  models.py  serializers.py  tasks.py  tests.py  views.py
ticket_selling/tickets/migrations/: 0001_initial.py  0002_ticketreservation.py
